# tiralabra

./: .gitignore  .pylintrc  README.md  coverage.xml  maarittelydokumentti.md  pyproject.toml  tasks.py
.github/workflows/: main.yml  python-app.yml
dokumentaatio/: kayttoohje.md  käyttöohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: dead_end_filling.py  labyrintin_luonti.py  labyrintti.py  main.py  tremaux.py
src/tests/: dead_end_filling_test.py  labyrintin_luonti_test.py  lanyrintin_luonti_test.py  tremaux_test.py
