[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Nikita Essine <nikita.essine@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
